--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -554,12 +554,24 @@ video {
   --tw-contain-style:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
 }
 
 .relative {
   position: relative;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .block {
@@ -570,6 +582,14 @@ video {
   display: flex;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -578,6 +598,34 @@ video {
   flex-wrap: wrap;
 }
 
+.items-center {
+  align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .border {
   border-width: 1px;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
